Fixed background image to stretch 100%

--- a/client/src/components/Friends/friends.css
+++ b/client/src/components/Friends/friends.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Mali&display=swap');
 
 .container {
-    background-image: url("https://upload.wikimedia.org/wikipedia/commons/4/42/Looseleaf_Legal_Pad_Background.svg");
+    
     padding-top: 70px;
     align-content: center;
     margin: 0px;
